# snowglobe

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  DBT_GUIDE.md  Dockerfile  INSTALATION_GUIDE.md  LICENSE  Makefile  QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  README.md  SUMMARY.md  TESTING.md  clean-all.sh  clean-docker.sh  clean-frontend.sh  docker-compose.yml  generate-certs.sh  pre-build.sh  pyproject.toml  pytest.ini  quickstart.sh  requirements-server.txt  requirements.txt  run-tests.sh  setup-dbt.sh  setup.py  snowglobe  snowglobe_improvements_summary.txt  tox.ini  validate-setup.sh
examples/: basic_usage.py  dbt_example.py  etl_pipeline.py  features_demo.py  https_connection_example.py  testing_example.py
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: DataExport.vue  DataImport.vue  DatabaseExplorer.vue  LogsPage.vue  ObjectBrowser.vue  ObjectBrowserNew.vue  ObjectManager.vue  OverviewPanel.vue  PythonWorksheet.vue  QueryHistoryPanel.vue  SessionsPanel.vue  SettingsPanel.vue  Sidebar.vue  WorksheetPanel.vue  WorksheetsPage.vue
snowglobe_server/: ._metadata.py  __init__.py  aws_integrations.py  data_export.py  data_import.py  data_quality.py  dbt_adapter.py  decorators.py  dynamic_tables.py  file_operations.py  hybrid_tables.py  information_schema.py  metadata.py  object_management.py  python_worksheet.py  query_executor.py  replication.py  schema_migrations.py  server.py  snowflake_functions.py  sql_translator.py  template_loader.py  workspace.py
snowglobe_server/static/: index.html
snowglobe_server/static/assets/: index-2cf63b92.js  index-4f98f91e.css
snowglobe_server/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_authentication.py  test_comprehensive_coverage.py  test_dbt_adapter.py  test_dbt_integration.py  test_dynamic_tables.py  test_edge_cases.py  test_hybrid_tables.py  test_integration.py  test_metadata.py  test_new_features.py  test_new_modules.py  test_performance.py  test_query_executor.py  test_server_endpoints.py  test_sql_translator.py  test_ssl.py  test_undrop.py
